--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
+    "ejs": "^3.1.9",
     "express": "^4.16.2",
     "express-validation": "^1.0.2",
     "helmet": "^3.21.1",
