--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ejs": "^3.1.9",
     "express": "^4.16.2",
     "express-validation": "^1.0.2",
+    "firebase-admin": "^11.10.1",
     "helmet": "^3.21.1",
     "http-status": "^1.0.1",
     "joi": "^13.1.2",
